Initial proposal for Dependency resolution based on scope